# sloppatch

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  SKILL.md  pyproject.toml  requirements.dev.txt
docker/: .env.template  dev.Dockerfile  dev.docker-compose.yaml
docker/overlay/: extensions.list  install-vscode-server-with-extensions.sh
src/: __main__.py
src/sloppatch/: README.md  apply.py  config.py  data.py  error.py  file.py  parse.py  prepare.py  sparse_file.py  whatthepatch_regexp.py
src/sloppatch/patch/: DEVELOPMENT.md  apply.py  convert.py  convert_data.py  prepare_by_file.py  prepare_by_file_data.py  raw_parse.py  raw_parse_data.py  util_mask.py
src/sloppatch/utils/: misc.py  sparse_file.py  spiral_range.py  types.py
src/sloppatch_cli/: cli.py  unified.py
tests/test_sloppatch/: helpers.py  test_apply.py  test_file.py  test_parse.py  test_prepare.py  test_sparse_file.py
tests/test_sloppatch/patch/: test_convert.py  test_prepare_by_file.py  test_raw_parse.py
tests/test_sloppatch/utils/: test_sparse_file.py  test_spiral_range.py
tests/test_sloppatch_cli/: e2e.sh
tests/test_sloppatch_cli/case_01/: input.txt  patch.txt
tests/test_sloppatch_cli/case_02/: patch.diff
tests/test_sloppatch_cli/case_03/: patch.txt
